--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,7 @@
 
-<ul *ngFor="let user of users">
-    <li>{{user.id}} - {{user.username}}</li>
-</ul>
+<app-navbar></app-navbar>
+
+<div class="container" style="margin-top: 100px">
+    <router-outlet></router-outlet>
+ 
+</div>
