--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
 
         <div class="dropdown" *ngIf="(accountService.currentUser | async) as user"dropdown>
             <img src="{{user.photoUrl || './assets/user.png'}}" alt="Profile picture">
-            <a class="dropdown-toggle text-light text-decoration-none ms-1" dropdownToggle>Welcome {{user.username | titlecase }}</a>
+            <a class="dropdown-toggle text-light text-decoration-none ms-1" dropdownToggle>Welcome {{user.knownAs | titlecase }}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
                 <a class="dropdown-item" (click)="loggout()">Loggout</a>
