--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -3,6 +3,9 @@
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="mb-2" *ngIf="(presenceService.onlineUsers | async)?.includes(member.username)">
+                    <i class="fa fa-user-circle text-success d-flex"><p style="margin-left: 10px;">Online</p></i>
+                </div>
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
@@ -13,7 +16,7 @@
                 </div>
                 <div>
                     <strong>Last active:</strong>
-                    <p>{{member.lastActive + 'Z' | timeago }}</p>
+                    <p>{{member.lastActive | timeago }}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
@@ -45,7 +48,7 @@
                 <gallery [items]="images" *ngIf="photoTab.active" class="gallery"></gallery>
             </tab>
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messsages [username]="member.username" [messages]="messages"></app-member-messsages>
+                <app-member-messsages [username]="member.username"></app-member-messsages>
             </tab>
         </tabset>
     </div>
