--- a/client/src/app/members/member-messsages/member-messsages.component.html
+++ b/client/src/app/members/member-messsages/member-messsages.component.html
@@ -1,8 +1,8 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="messages?.length === 0">No messages</div>
-        <ul *ngIf="messages?.length !== 0" class="chat">
-            <li *ngFor="let message of messages">
+        <div *ngIf="(messageService.messageThread | async)?.length === 0">No messages</div>
+        <ul *ngIf="(messageService.messageThread | async)!.length > 0" class="chat">
+            <li *ngFor="let message of (messageService.messageThread | async)">
                 <div>
                     <span class="chat-img float-end">
                         <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="Image of user">
@@ -10,9 +10,9 @@
                     <div class="chat-body">
                         <div class="header">
                             <small class="text-muted">
-                                <span class="fa fa-clock-o" style="margin-right: 10px;">{{message.messageSent + 'Z'| timeago}}</span>
+                                <span class="fa fa-clock-o d-flex" style="margin-right: 10px;"><p style="margin-left: 10px;">{{message.messageSent | timeago}}</p></span>
                                 <span class="text-danger" *ngIf="!message.dateRead && message.senderUsername !== username">(unread)</span>
-                                <span class="text-success" *ngIf="message.dateRead && message.senderUsername !== username">(read {{message.dateRead  + 'Z' | timeago}})</span>
+                                <span class="text-success" *ngIf="message.dateRead && message.senderUsername !== username">(read {{message.dateRead | timeago}})</span>
                             </small>
                         </div>
                         <p>{{message.content}}</p>
